<resources>
    <!--应用名字-->
    <string name="app_name">时时彩分析大师</string>
    <!--注册界面-->
    <string name="register_phone_hint">手机号</string>
    <string name="register_password_hint">密码</string>
    <string name="register_password_hint_again">请再次输入密码</string>
    <string name="register_code_hint">验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_invitation">邀请码</string>
    <string name="register_register_btn">注   册</string>
    <!--登录界面-->
    <string name="login_btn">登   录</string>
    <!--主页4大导航栏文字-->
    <string name="main_im_message">实时消息</string>
    <string name="main_history_message">历史消息</string>
    <string name="main_limit">超大极限</string>
    <string name="main_profile">我的</string>
    <string name="main_no_data">暂无数据</string>
    <!--个人界面-->
    <string name="profile_setting">设置</string>
    <string name="profile_member">会员</string>
    <string name="profile_limit">极限通知</string>
    <string name="profile_big_limit">超大极限</string>
    <string name="profile_share">分享</string>
    <string name="profile_charge">充值</string>
    <string name="profile_about">关于</string>
    <string name="profile_version">版本</string>
    <string name="profile_hint">请输入……</string>
    <string name="profile_ok">确认</string>
    <string name="profile_cancel">取消</string>
    <string name="profile_exit">退出登录</string>
</resources>
