<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kevin="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--手机号输入框层-->
    <RelativeLayout
        android:id="@+id/mPhoneInputLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <!--手机图标-->
        <ImageView
            android:id="@+id/mPhoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_register_phone"
            android:contentDescription="@string/app_name" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/mPhoneIcon">
            <!--手机号输入框-->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/mPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_phone_hint"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <!--密码输入框层-->
    <RelativeLayout
        android:id="@+id/mPasswordInputLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mPhoneInputLay">

        <!--密码输入框图标-->
        <ImageView
            android:id="@+id/mPasswordIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_register_password"
            android:contentDescription="@string/app_name" />
        <!--密码输入框-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/mPasswordIcon"
            kevin:passwordToggleDrawable="@drawable/selector_register_eye"
            kevin:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <!--登录注册层-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mPasswordInputLay"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <!--登录按钮-->
        <Button
            android:id="@+id/mLoginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/login_btn" />
        <!--注册按钮-->
        <Button
            android:id="@+id/mRegisterBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/register_register_btn" />
    </LinearLayout>
    <!--产品Logo-->
    <ImageView
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mPhoneInputLay"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon_logo"
        android:contentDescription="@string/app_name" />

</RelativeLayout>