<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!--内容布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--标题栏-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <!--左侧侧滑按钮-->
            <ImageView
                android:id="@+id/mLeftIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_main_profile_normal"
                android:contentDescription="@string/app_name"/>
            <!--居中文字-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp"/>
        </android.support.v7.widget.Toolbar>
        <!--各种界面的适配器-->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_color_divider"/>
        <!--3个模块布局-->
        <RadioGroup
            android:id="@+id/mNavigationGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/main_navigation_bar_bg"
            android:orientation="horizontal">
            <!--实时消息-->
            <RadioButton
                android:id="@+id/mImRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawablePadding="1dp"
                android:drawableTop="@drawable/selector_main_message"
                android:gravity="center"
                android:paddingTop="1dp"
                android:text="@string/main_im_message"
                android:textColor="@color/selector_main_text"
                android:textSize="12sp"/>
            <!--历史消息-->
            <RadioButton
                android:id="@+id/mHistoryRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="1dp"
                android:drawableTop="@drawable/selector_main_history"
                android:gravity="center"
                android:paddingTop="1dp"
                android:text="@string/main_history_message"
                android:textColor="@color/selector_main_text"
                android:textSize="12sp"/>
            <!--超大极限-->
            <RadioButton
                android:id="@+id/mLimitRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="1dp"
                android:drawableTop="@drawable/selector_main_limit"
                android:gravity="center"
                android:paddingTop="1dp"
                android:text="@string/main_limit"
                android:textColor="@color/selector_main_text"
                android:textSize="12sp"/>
        </RadioGroup>
    </LinearLayout>
    <!--左滑菜单-->
    <FrameLayout
        android:id="@+id/mLeftLay"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"/>
</android.support.v4.widget.DrawerLayout>
